--- a/portfolio/main/templates/main/index.html
+++ b/portfolio/main/templates/main/index.html
@@ -52,7 +52,7 @@
                     <p class="lead mb-5">Software Engineer looking for opportunity to cybersecurity field.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/racoros/"><i class="fab fa-linkedin-in"></i></a>
-						<a class="social-icon" href="https://github.com/Rakunnn"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/Rakunnn"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -101,8 +101,12 @@
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
-						<li class="list-inline-item"><i class="fab fa-aws"></i></li>
-						<li class="list-inline-item"><i class="fa fa-microchip"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-aws"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-docker"></i></li>
+                        <li class="list-inline-item"><i class="fa fa-network-wired"></i></li>
+                        <li class="list-inline-item"><i class="fa fa-microchip"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-windows"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-linux"></i></li> 
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
